# CompGrafica

./: CMakeLists.txt  Introduction.cpp  Math3.cpp  READ ME.txt  Shader.h  glad.c  run.txt
Shaders/: BufferA.fs  BufferB.fs  BufferC.fs  BufferD.fs  Image.frag  Image.fs  Image.fs.frag  Image_old.frag  TextureViewer.fs.frag  TextureViewer.vs.vert
